@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpSession;
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Valid;
@@ -24,7 +25,6 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * ClassName： SystemCourseManagement
@@ -52,8 +52,10 @@ public class SystemCourseManagement {
         return "frames/system_course_management";
     }
 
-    @GetMapping("/systemCourseList"  )
-    public String systemCourseList(Model model){
+    @GetMapping("/systemCourseList")
+    public String systemCourseList(Model model, HttpSession session) throws Exception {
+        List<SystemCourse> allSystemCoursesList = systemCourseService.getAllSystemCoursesList();
+        session.setAttribute("systemCourses", allSystemCoursesList);
         return "frames/system_course_list";
     }
 
@@ -83,8 +85,7 @@ public class SystemCourseManagement {
 
 
     @PostMapping("/addSystemCourse.do")
-    public String addSystemCourse(ModelMap model, @Valid @ModelAttribute("systemCourse") SystemCourse systemCourse, BindingResult result) throws Exception {
-        result = removeFieldError(systemCourse, result);
+    public String addSystemCourse(ModelMap model, @Valid SystemCourse systemCourse, BindingResult result, HttpSession session) throws Exception {
         if (result.hasErrors()) {
             return "frames/add_system_course";
         }
@@ -92,10 +93,10 @@ public class SystemCourseManagement {
         systemCourseService.insertSystemCourse(systemCourse);
 
         List<SystemCourse> systemCourses = systemCourseService.getAllSystemCoursesList();
-        model.addAttribute("systemCourses", systemCourses);
+        session.setAttribute("systemCourses", systemCourses);
         model.addAttribute("successMessage", "新增系統課程成功");
 
-        return "redirect:/course/systemCourseList";
+        return "redirect:/course/system_course_list";
     }
 
 
@@ -115,21 +116,21 @@ public class SystemCourseManagement {
 
         List<FieldError> errorsListToKeep = result.getFieldErrors().stream()
                 .filter(fieldError -> !removedFieldnamesSet.contains(fieldError.getField()))
-                .collect(Collectors.toList());
+                .toList();
 
-        BindingResult newResult = new BeanPropertyBindingResult(targetObject, result.getObjectName());
+        result = new BeanPropertyBindingResult(targetObject, result.getObjectName());
         for (FieldError fieldError : errorsListToKeep) {
-            newResult.addError(fieldError);
+            result.addError(fieldError);
         }
-        return newResult;
+        return result;
     }
 
     @ExceptionHandler(value = {ConstraintViolationException.class})
-    public ModelAndView handleConstraintViolationException(HttpServletRequest req, ConstraintViolationException ex, BindingResult result) {
-        for (ConstraintViolation<?> violation : ex.getConstraintViolations()) {
-            String field = violation.getPropertyPath().toString().split("\\.")[1];  // 確保獲取字段名稱
-            String message = violation.getMessage();
-            result.addError(new FieldError("systemCourse", field, message));
+    public ModelAndView handleConstraintViolationException(HttpServletRequest req, ConstraintViolationException ex, Model model) {
+        Set<ConstraintViolation<?>> violations = ex.getConstraintViolations();
+        StringBuilder strBuilder = new StringBuilder();
+        for (ConstraintViolation<?> violation : violations) {
+            strBuilder.append(violation.getMessage()).append("<br>");
         }
 
         String requestURI = req.getRequestURI();
@@ -140,9 +141,9 @@ public class SystemCourseManagement {
             viewName = "error/default_error_page";
         }
 
-        ModelAndView modelAndView = new ModelAndView(viewName);
-        modelAndView.addAllObjects(result.getModel());
-        return modelAndView;
+        model.addAttribute("errorMessage", "請修正以下錯誤:<br>" + strBuilder.toString());
+
+        return new ModelAndView(viewName, model.asMap());
     }
 
 }
